--- a/insurance-calculator.html
+++ b/insurance-calculator.html
@@ -1,172 +1,116 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Калькулятор страхования от клеща</title>
-    <style>
-        body {
-            font-family: sans-serif;
-        }
-        .container {
-            width: 500px;
-            margin: 20px auto;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        input[type="number"],
-        select {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
-        .additional-options {
-            margin-top: 20px;
-            border-top: 1px solid #ddd;
-            padding-top: 10px;
-        }
-        .error {
-            color: red;
-            margin-top: 10px;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h2>Калькулятор страхования от клеща</h2>
-        <div class="calculator-inputs">
-            <h3>Параметры страхования</h3>
-            <div>
-                <label for="program">Программа страхования:</label>
-                <select id="program">
-                    <option value="basic">Базовая</option>
-                    <option value="complex">Комплексная</option>
-                    <option value="complex_ambulance">Комплексная + скорая</option>
-                </select>
-            </div>
-            <div>
-                <label for="insuranceDays">Срок страхования (дни):</label>
-                <input type="number" id="insuranceDays" value="30" min="1" required>
-            </div>
-            <div>
-                <label for="coverageAmount">Сумма страхового покрытия (₽):</label>
-                <input type="number" id="coverageAmount" value="50000" min="1" required>
-            </div>
-            <div>
-                <label for="clientAge">Возраст клиента:</label>
-                <input type="number" id="clientAge" min="0" max="120" required>
-            </div>
-            <div>
-                <label for="region">Регион:</label>
-                <select id="region" required>
-                    <option value="">Выберите регион</option>
-                </select>
-            </div>
+function calculatePremium() {
+  const program = document.querySelector('input[name="program"]:checked').value;
+  const insuranceDays = parseInt(document.getElementById('insuranceDays').value, 10);
+  const coverageAmount = parseFloat(document.getElementById('coverageAmount').value, 10);
+  const clientAge = parseInt(document.getElementById('clientAge').value, 10);
+  const region = document.getElementById('region').value;
+  const hobby = document.getElementById('hobby').value;
+  const diseaseHistory = document.getElementById('diseaseHistory').value;
+  const disabilityCompensation = parseFloat(document.getElementById('disabilityCompensation').value, 10);
+  const healthStatus = document.getElementById('healthStatus').value;
+  const franchise = parseFloat(document.getElementById('franchise').value, 10);
+  const additionalOption = document.getElementById('additionalOption').value;
 
-            <div class="additional-options">
-                <h3>Дополнительные параметры</h3>
-                <div>
-                    <label for="occupation">Занятие/хобби:</label>
-                    <input type="text" id="occupation">
-                </div>
-                <div>
-                    <label for="healthCondition">Состояние здоровья:</label>
-                    <select id="healthCondition">
-                        <option value="good">Хорошее</option>
-                        <option value="average">Среднее</option>
-                        <option value="bad">Плохое</option>
-                    </select>
-                </div>
-                <div>
-                    <label for="disabilityCoverage">Сумма компенсации за инвалидность (₽):</label>
-                    <input type="number" id="disabilityCoverage" value="0" min="0">
-                </div>
-                <div>
-                    <label for="franchise">Франшиза (₽):</label>
-                    <input type="number" id="franchise" value="0" min="0">
-                </div>
-            </div>
-            <button onclick="calculatePremium()">Рассчитать</button>
-            <div id="premiumResult">Введите данные и нажмите "Рассчитать".</div>
-            <div id="error-message" class="error"></div>
-        </div>
-    </div>
+  if (isNaN(insuranceDays) || insuranceDays <= 0 || isNaN(coverageAmount) || coverageAmount <= 0) {
+    document.getElementById('premiumResult').textContent = 'Пожалуйста, введите корректные данные для расчёта.';
+    return;
+  }
 
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-          fetch('regions.json') // Замените на путь к вашему файлу с регионами
-            .then(response => response.json())
-            .then(regions => {
-              const regionSelect = document.getElementById('region');
-              regions.forEach(region => {
-                const option = document.createElement('option');
-                option.value = region.id; // или region.name, в зависимости от структуры JSON
-                option.text = region.name;
-                regionSelect.appendChild(option);
-              });
-            }).catch(error => {
-              console.error("Ошибка загрузки регионов:", error);
-              document.getElementById('error-message').textContent = 'Ошибка загрузки регионов.';
-            });
-        });
+  console.log("Возраст клиента:", clientAge);
+  console.log("Регион:", region);
+  console.log("Занятие или хобби:", hobby);
+  console.log("История заболеваний:", diseaseHistory);
+  console.log("Сумма компенсации за потерю трудоспособности:", disabilityCompensation);
+  console.log("Состояние здоровья:", healthStatus);
+  console.log("Франшиза:", franchise);
+  console.log("Дополнительная опция:", additionalOption);
 
-        function calculatePremium() {
-            const insuranceDays = Number(document.getElementById('insuranceDays').value);
-            const coverageAmount = Number(document.getElementById('coverageAmount').value);
-            const clientAge = Number(document.getElementById('clientAge').value);
-            const region = document.getElementById('region').value;
-            const occupation = document.getElementById('occupation').value;
-            const healthCondition = document.getElementById('healthCondition').value;
-            const disabilityCoverage = Number(document.getElementById('disabilityCoverage').value);
-            const franchise = Number(document.getElementById('franchise').value);
-            const program = document.getElementById('program').value;
-            const errorMessage = document.getElementById('error-message');
-            errorMessage.textContent = "";
+  let baseRate;
+  switch (program) {
+    case 'basic':
+      baseRate = 0.01;
+      break;
+    case 'complex':
+      baseRate = 0.015;
+      break;
+    case 'complex_ambulance':
+      baseRate = 0.02;
+      break;
+    default:
+      baseRate = 0.01;
+  }
 
-            if (Number.isNaN(insuranceDays) || insuranceDays <= 0 || Number.isNaN(coverageAmount) || coverageAmount <= 0 || Number.isNaN(clientAge) || clientAge < 0 || region === "") {
-                errorMessage.textContent = 'Пожалуйста, заполните все обязательные поля корректно.';
-                return;
-            }
+  // Учет дополнительных факторов
+  let riskFactor = 1.0;
 
-            let baseRate = 0.01;
+  // Учет хобби
+  switch (hobby) {
+    case 'low':
+      riskFactor *= 1.0;
+      break;
+    case 'medium':
+      riskFactor *= 1.2;
+      break;
+    case 'high':
+      riskFactor *= 1.5;
+      break;
+  }
 
-            switch (program) {
-                case 'basic':
-                    baseRate = 0.01;
-                    break;
-                case 'complex':
-                    baseRate = 0.015;
-                    break;
-                case 'complex_ambulance':
-                    baseRate = 0.02;
-                    break;
-            }
+  // Учет истории заболеваний
+  switch (diseaseHistory) {
+    case 'none':
+      riskFactor *= 1.0;
+      break;
+    case 'minor':
+      riskFactor *= 1.1;
+      break;
+    case 'serious':
+      riskFactor *= 1.3;
+      break;
+  }
 
-            let premium = coverageAmount * baseRate * insuranceDays / 365;
+  // Учет состояния здоровья
+  switch (healthStatus) {
+    case 'excellent':
+      riskFactor *= 1.0;
+      break;
+    case 'good':
+      riskFactor *= 1.1;
+      break;
+    case 'fair':
+      riskFactor *= 1.2;
+      break;
+    case 'poor':
+      riskFactor *= 1.5;
+      break;
+  }
 
-            if (healthCondition === 'bad') {
-                premium *= 1.2;
-            }
+  // Учет франшизы
+  let franchiseDiscount = 0;
+  if (franchise > 0) {
+    franchiseDiscount = franchise * 0.1; // Скидка 10% от суммы франшизы
+  }
 
-            if (disabilityCoverage > 0) {
-                premium += disabilityCoverage * 0.005;
-            }
+  // Учет дополнительной опции
+  let additionalOptionCost = 0;
+  switch (additionalOption) {
+    case 'homeCare':
+      additionalOptionCost = 5000; // Дополнительная стоимость
+      break;
+    case 'rehabilitation':
+      additionalOptionCost = 10000; // Дополнительная стоимость
+      break;
+  }
 
-            if (franchise > 0) {
-                premium -= franchise * 0.001;
-            }
+  // Расчет премии
+  let premium = (coverageAmount * baseRate * insuranceDays / 365) * riskFactor;
+  premium -= franchiseDiscount; // Применение скидки за франшизу
+  premium += additionalOptionCost; // Добавление стоимости дополнительной опции
 
-            premium = Math.round(premium * 100) / 100;
+  // Учет компенсации за потерю трудоспособности
+  if (disabilityCompensation > 0) {
+    premium += disabilityCompensation * 0.05; // Дополнительная стоимость 5% от суммы компенсации
+  }
 
-            document.getElementById('premiumResult').textContent = `Расчётная стоимость страхования: ${premium.toLocaleString('ru-RU')} ₽`;
-        }
-    </script>
-
-</body>
-</html>
+  document.getElementById('premiumResult').textContent = `Расчётная стоимость страхования: ${premium.toFixed(2)} ₽`;
+}
