--- a/insurance-calculator.html
+++ b/insurance-calculator.html
@@ -1,116 +1,84 @@
-function calculatePremium() {
-  const program = document.querySelector('input[name="program"]:checked').value;
-  const insuranceDays = parseInt(document.getElementById('insuranceDays').value, 10);
-  const coverageAmount = parseFloat(document.getElementById('coverageAmount').value, 10);
-  const clientAge = parseInt(document.getElementById('clientAge').value, 10);
-  const region = document.getElementById('region').value;
-  const hobby = document.getElementById('hobby').value;
-  const diseaseHistory = document.getElementById('diseaseHistory').value;
-  const disabilityCompensation = parseFloat(document.getElementById('disabilityCompensation').value, 10);
-  const healthStatus = document.getElementById('healthStatus').value;
-  const franchise = parseFloat(document.getElementById('franchise').value, 10);
-  const additionalOption = document.getElementById('additionalOption').value;
-
-  if (isNaN(insuranceDays) || insuranceDays <= 0 || isNaN(coverageAmount) || coverageAmount <= 0) {
-    document.getElementById('premiumResult').textContent = 'Пожалуйста, введите корректные данные для расчёта.';
-    return;
-  }
-
-  console.log("Возраст клиента:", clientAge);
-  console.log("Регион:", region);
-  console.log("Занятие или хобби:", hobby);
-  console.log("История заболеваний:", diseaseHistory);
-  console.log("Сумма компенсации за потерю трудоспособности:", disabilityCompensation);
-  console.log("Состояние здоровья:", healthStatus);
-  console.log("Франшиза:", franchise);
-  console.log("Дополнительная опция:", additionalOption);
-
-  let baseRate;
-  switch (program) {
-    case 'basic':
-      baseRate = 0.01;
-      break;
-    case 'complex':
-      baseRate = 0.015;
-      break;
-    case 'complex_ambulance':
-      baseRate = 0.02;
-      break;
-    default:
-      baseRate = 0.01;
-  }
-
-  // Учет дополнительных факторов
-  let riskFactor = 1.0;
-
-  // Учет хобби
-  switch (hobby) {
-    case 'low':
-      riskFactor *= 1.0;
-      break;
-    case 'medium':
-      riskFactor *= 1.2;
-      break;
-    case 'high':
-      riskFactor *= 1.5;
-      break;
-  }
-
-  // Учет истории заболеваний
-  switch (diseaseHistory) {
-    case 'none':
-      riskFactor *= 1.0;
-      break;
-    case 'minor':
-      riskFactor *= 1.1;
-      break;
-    case 'serious':
-      riskFactor *= 1.3;
-      break;
-  }
-
-  // Учет состояния здоровья
-  switch (healthStatus) {
-    case 'excellent':
-      riskFactor *= 1.0;
-      break;
-    case 'good':
-      riskFactor *= 1.1;
-      break;
-    case 'fair':
-      riskFactor *= 1.2;
-      break;
-    case 'poor':
-      riskFactor *= 1.5;
-      break;
-  }
-
-  // Учет франшизы
-  let franchiseDiscount = 0;
-  if (franchise > 0) {
-    franchiseDiscount = franchise * 0.1; // Скидка 10% от суммы франшизы
-  }
-
-  // Учет дополнительной опции
-  let additionalOptionCost = 0;
-  switch (additionalOption) {
-    case 'homeCare':
-      additionalOptionCost = 5000; // Дополнительная стоимость
-      break;
-    case 'rehabilitation':
-      additionalOptionCost = 10000; // Дополнительная стоимость
-      break;
-  }
-
-  // Расчет премии
-  let premium = (coverageAmount * baseRate * insuranceDays / 365) * riskFactor;
-  premium -= franchiseDiscount; // Применение скидки за франшизу
-  premium += additionalOptionCost; // Добавление стоимости дополнительной опции
-
-  // Учет компенсации за потерю трудоспособности
-  if (disabilityCompensation > 0) {
-    premium += disabilityCompensation * 0.05; // Дополнительная стоимость 5% от суммы компенсации
-  }
-
-  document.getElementById('premiumResult').textContent = `Расчётная стоимость страхования: ${premium.toFixed(2)} ₽`;
-}
+<div class="container" id="home">
+  <h2>Калькулятор страхования от клеща</h2>
+  <div class="calculator-inputs">
+    <h3>Параметры страхования</h3>
+    <div>
+      <input type="radio" id="basic" name="program" value="basic" checked>
+      <label for="basic">Базовая</label>
+    </div>
+    <div>
+      <input type="radio" id="complex" name="program" value="complex">
+      <label for="complex">Комплексная</label>
+    </div>
+    <div>
+      <input type="radio" id="complex_ambulance" name="program" value="complex_ambulance">
+      <label for="complex_ambulance">Комплексная + скорая</label>
+    </div>
+    <div>
+      <label for="insuranceDays">Срок страхования (дни):</label>
+      <input type="number" id="insuranceDays" value="30" min="1">
+    </div>
+    <div>
+      <label for="coverageAmount">Сумма страхового покрытия (₽):</label>
+      <input type="number" id="coverageAmount" value="50000" min="1">
+    </div>
+    <div>
+      <label for="clientAge">Возраст клиента:</label>
+      <input type="number" id="clientAge" min="0" max="999">
+    </div>
+    <div>
+      <label for="region">Регион:</label>
+      <select id="region">
+        <option value="">Выберите регион</option>
+      </select>
+    </div>
+    <div>
+      <label for="hobby">Занятие или хобби:</label>
+      <select id="hobby">
+        <option value="low">Низкий риск (офисная работа, чтение)</option>
+        <option value="medium">Средний риск (туризм, велоспорт)</option>
+        <option value="high">Высокий риск (альпинизм, экстремальные виды спорта)</option>
+      </select>
+    </div>
+    <div>
+      <label for="diseaseHistory">История заболеваний:</label>
+      <select id="diseaseHistory">
+        <option value="none">Нет хронических заболеваний</option>
+        <option value="minor">Незначительные заболевания</option>
+        <option value="serious">Серьезные хронические заболевания</option>
+      </select>
+    </div>
+    <div>
+      <label for="disabilityCompensation">Сумма компенсации за потерю трудоспособности (₽):</label>
+      <input type="number" id="disabilityCompensation" value="0" min="0">
+    </div>
+    <div>
+      <label for="healthStatus">Состояние здоровья:</label>
+      <select id="healthStatus">
+        <option value="excellent">Отличное</option>
+        <option value="good">Хорошее</option>
+        <option value="fair">Удовлетворительное</option>
+        <option value="poor">Плохое</option>
+      </select>
+    </div>
+    <div>
+      <label for="franchise">Франшиза:</label>
+      <select id="franchise">
+        <option value="0">Без франшизы</option>
+        <option value="5000">5000 ₽</option>
+        <option value="10000">10000 ₽</option>
+        <option value="20000">20000 ₽</option>
+      </select>
+    </div>
+    <div>
+      <label for="additionalOption">Дополнительная опция:</label>
+      <select id="additionalOption">
+        <option value="none">Нет</option>
+        <option value="homeCare">Медицинская помощь на дому</option>
+        <option value="rehabilitation">Реабилитация после укуса</option>
+      </select>
+    </div>
+    <button onclick="calculatePremium()">Рассчитать</button>
+    <div id="premiumResult">Введите данные и нажмите "Рассчитать".</div>
+  </div>
+</div>
